--- a/sdk/nodejs/package.json
+++ b/sdk/nodejs/package.json
@@ -54,6 +54,9 @@
         "nyc": "^15.1.0",
         "sinon": "^14.0.0"
     },
+    "resolutions": {
+        "ts-node/typescript": "~3.8.3"
+    },
     "pulumi": {
         "comment": "Do not remove. Marks this as as a deployment-time-only package"
     },
