--- a/sdk/nodejs/package.json
+++ b/sdk/nodejs/package.json
@@ -68,5 +68,6 @@
     },
     "//": [
         "NOTE: @types/node is pinned due to grpc/grpc-node#2002"
-    ]
+    ],
+    "packageManager": "yarn@3.5.0"
 }
